@@ -1738,18 +1738,20 @@ class DataEnumerator(Enumerator):
         """
         return self._retrieve(value, transaction=transaction, condition=condition)
     
-    def rows(self, transaction=None, condition=None):
+    def rows(self, transaction=None, condition=None, sort=()):
         """Return sequence of rows of the underlying data object.
 
         Arguments:
 
           transaction -- transaction for data operations.
           condition -- runtime filter condition as an 'Operator' instance or None.
+          sort -- sorting specification as accepted by 'pytis.data.Data.select()'.
 
         """
         the_condition = self._condition(condition=condition)
         def lfunction():
-            return self._data.select_map(identity, condition=the_condition, transaction=transaction)
+            return self._data.select_map(identity, condition=the_condition,
+                                         transaction=transaction, sort=sort)
         return with_lock(self._data_lock, lfunction)
 
     def type(self, column):
